# openzktool

./: .editorconfig  .gh-cache-reset  .gitignore  404.html  ANALYTICS.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_COMPLETE.sh  DEMO_GUIDE.md  DEMO_README.md  DO_NO_HARM.md  GRANT_PROPOSAL.md  IMPROVEMENT_PLAN.md  INSTALL.md  PLATFORM_INDEPENDENCE.md  PRIVACY.md  README.md  REORGANIZATION_PLAN.md  ROADMAP.md  ROADMAP_6_MONTHS.md  RUN_DEMO.md  SCRIPTS_OVERVIEW.md  SDG_MAPPING.md  SECURITY.md  TESTING_REPORT.md  TESTING_STRATEGY.md  VIDEO_DEMO_QUICKSTART.md  VIDEO_RECORDING_GUIDE.md  demo_multichain.sh  demo_privacy_proof.sh  demo_sdf_video.sh  demo_video.sh  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  sitemap.xml  (+2 more)
.github/: CODEOWNERS  GOOD_FIRST_ISSUES_EXAMPLES.md  PULL_REQUEST_TEMPLATE.md  (+1 more)
soroban/: Cargo.toml  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  README  README.md  SECURITY.md  TEST_EXECUTION_GUIDE.md  calldata.json  contract-spec.json  proof.json  public.json  run_all_tests.sh  safe_build.sh  verifier_contract.rs  verify_on_chain.sh  verify_wasm.sh  wasm32-no-ref.json  zk_convert.js  zk_run.sh
soroban/.cargo/: config.toml
soroban/soroban/: zk_convert.js
soroban/src/: curve.rs  field.rs  fq12.rs  lib.rs  pairing.rs  tests.rs
soroban/test_snapshots/test/: test_version.1.json
soroban/zk-demo/: args.json  args_numeric.json  calldata.json  contract-spec.json  invoke_from_args.sh  manual_export.js  multiplier2.circom  proof.json  verification_key.json  zk_convert.js
(+305 files in other folders)
