[package]
name = "soroban-groth16-verifier"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-with-logs]
inherits = "release"
